NOJIRA Javadoc plugin updates
(cherry picked from commit f9f7156d70b8e061d698db7f520f0915f30db569)