@@ -151,7 +151,7 @@
             -->
             <groupId>org.owasp</groupId>
             <artifactId>dependency-check-maven</artifactId>
-            <version>6.2.2</version>
+            <version>9.0.9</version>
             <dependencies>
               <dependency>
                 <groupId>org.sakaiproject</groupId>
@@ -2501,7 +2501,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>3.6.3</version>
           <configuration>
             <links>
               <link>http://docs.oracle.com/javase/8/docs/api/</link>
@@ -2518,8 +2518,34 @@
             <maxmemory>2048m</maxmemory>
             <doclint>none</doclint>
             <failOnError>false</failOnError>
+            <failOnWarnings>false</failOnWarnings>
+            <additionalOptions>
+              <additionalOption>--add-modules</additionalOption>
+              <additionalOption>java.xml</additionalOption>
+              <additionalOption>--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED</additionalOption>
+              <additionalOption>--add-exports=java.xml/com.sun.org.apache.xml.internal.utils=ALL-UNNAMED</additionalOption>
+            </additionalOptions>
+            <additionalDependencies>
+              <!-- these wicket dependencies can be removed once this version of wicket is no longer needed (delegatedaccess) -->
+              <additionalDependency>
+                <groupId>org.apache.wicket</groupId>
+                <artifactId>wicket-core</artifactId>
+                <version>6.30.0</version>
+              </additionalDependency>
+              <additionalDependency>
+                <groupId>org.apache.wicket</groupId>
+                <artifactId>wicket-extensions</artifactId>
+                <version>6.30.0</version>
+              </additionalDependency>
+              <additionalDependency>
+                <groupId>org.apache.wicket</groupId>
+                <artifactId>wicket-util</artifactId>
+                <version>6.30.0</version>
+              </additionalDependency>
+            </additionalDependencies>
           </configuration>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
@@ -2618,7 +2644,7 @@
             <dependency>
               <groupId>com.github.spotbugs</groupId>
               <artifactId>spotbugs</artifactId>
-               <version>4.7.2</version>
+               <version>4.8.2</version>
              </dependency>
           </dependencies>
         </plugin>
@@ -2880,12 +2906,6 @@
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
       </plugin>
-      <!-- javadoc plugin requires more than 1GB to run - disabling by default -->
-      <!-- Disabled since it fails on OSX -https://jira.codehaus.org/browse/MCOBERTURA-180
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-      </plugin>-->
       <!-- Code analysis report - fails to find the rulesets
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
